Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.30
* Documented behavior of Outstanding Summary report (Chris T, 3601314)
* Fix for translations showing multiple types (Chris T, 3601737)
* Updated gnome.css (Pongracz Istvan)

Changelog for 1.3.29
* Added db routines for role backup and restore for shared hosting
environments (Chris T, 3598924, filed by Erik H)
* Added provision in Makefile to instantiate pos.conf.pl if not exist (Chris
T, 3599945)
* Fixed errors adding shipto on invoice screen (Chris T, 3599908)
* Fixed permission denied errors adding translations (Chris T, 3599943)
* Added version number to message at top of menu (Chris T, 3600009)
* Added wrapper div around pricegroup field in contact screen to allow cssp,
Chris T.
* Fixed inverted tax numbers in vendor taxable sales report (Chris T, 3600002)
* Fixed cash/receipt and payment screen calculating to pay wrong (Chris T,
3599995)
* Fixed net-0 transactions not showing up on search (Chris T, 3600700)
* Fixed incorrect recommendation in Makefile.PL (Chris T, h.t Havard S and
Robert C)
* Fixed contact info addition workflow.  Now entering multiple contact records 
is not a total pain(Chris T)
* Fixed lines 2 and 3 not showing on address div for contacts (Chris T)
* Fixed credit limit not accounting for some payments (Chris T, 3600679)
* Payments tables in invoice/transaction screens can be referenced in CSS
(Chris T)
* Updated Hungarian translation (Pongracz Istvan)

Chris T is Chris Travers
Erik H is Erik Huelsmann

Changelog for 1.3.28
* Added db list to setup.pl when no db is entered and credentials allow login
  to "postgres" db. (Chris T)
* Added copy db utility to setup.pl for testing dbs (Chris T)
* Fixing is_zero errors on ar/ap transaction screens w/tax incldued (Chris T)
* Fixing csv ar transactions not showing taxes (Chris T, 3589640)
* Fixing demo quotations having descriptions taking too much space (Chris T)