@@ -6,6 +6,7 @@ Changelog for 1.3.30
 * Documented behavior of Outstanding Summary report (Chris T, 3601314)
 * Fix for translations showing multiple types (Chris T, 3601737)
 * Updated gnome.css (Pongracz Istvan)
+* Fixed vendor cash account link not respected in payment interface (Chris T)
 
 Changelog for 1.3.29
 * Added db routines for role backup and restore for shared hosting
